force-app/main/default/objects/os_Project__c/fields/os_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Account_Name__c</fullName>
    <label>Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>