force-app/main/default/objects/os_Project__c/fields/os_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>os_Account_Number__c</fullName>
    <label>Account Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>