force-app/main/default/objects/os_Project__c/fields/os_Bank_Branch_Name_and_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Bank_Branch_Name_and_Address__c</fullName>
    <label>Bank Branch Name and Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>