force-app/main/default/objects/os_Project__c/fields/os_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>