force-app/main/default/objects/os_Project__c/fields/os_Bedrooms_Max__c.field-meta.xml
<CustomField>
    <fullName>os_Bedrooms_Max__c</fullName>
    <label>Bedrooms - max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>