force-app/main/default/objects/os_Project__c/fields/os_Bedrooms_Min__c.field-meta.xml
<CustomField>
    <fullName>os_Bedrooms_Min__c</fullName>
    <label>Bedrooms - min</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>