force-app/main/default/objects/os_Project__c/fields/os_Commercial_License_No__c.field-meta.xml
<CustomField>
    <fullName>os_Commercial_License_No__c</fullName>
    <label>Commercial License No:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>