force-app/main/default/objects/os_Project__c/fields/os_Developer__c.field-meta.xml
<CustomField>
    <fullName>os_Developer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Developer</relationshipName>
    <type>Lookup</type>
</CustomField>