force-app/main/default/objects/os_Project__c/fields/os_Developer_Account__c.field-meta.xml
<CustomField>
    <fullName>os_Developer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Developer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>DeveloperAccount</relationshipName>
    <type>Lookup</type>
</CustomField>