force-app/main/default/objects/os_Project__c/fields/os_Developer_Logo__c.field-meta.xml
<CustomField>
    <fullName>os_Developer_Logo__c</fullName>
    <label>Developer Logo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>