force-app/main/default/objects/os_Project__c/fields/os_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>os_Email_Address__c</fullName>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>