force-app/main/default/objects/os_Project__c/fields/os_IBAN_No__c.field-meta.xml
<CustomField>
    <fullName>os_IBAN_No__c</fullName>
    <label>IBAN No</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>