force-app/main/default/objects/os_Project__c/fields/os_Job_Completion__c.field-meta.xml
<CustomField>
    <fullName>os_Job_Completion__c</fullName>
    <label>Job Completion (%)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>