force-app/main/default/objects/os_Project__c/fields/os_PageSiteURL__c.field-meta.xml
<CustomField>
    <fullName>os_PageSiteURL__c</fullName>
    <label>PageSiteURL</label>
    <type>Url</type>
</CustomField>