force-app/main/default/objects/os_Project__c/fields/os_Price_Min__c.field-meta.xml
<CustomField>
    <fullName>os_Price_Min__c</fullName>
    <label>Price - min</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>