force-app/main/default/objects/os_Project__c/fields/os_Project_18_Digit_Id__c.field-meta.xml
<CustomField>
    <fullName>os_Project_18_Digit_Id__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project 18 Digit Id</label>
    <type>Text</type>
</CustomField>