force-app/main/default/objects/os_Project__c/fields/os_Project_Admin_2__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Admin_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Admin 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectAdmin2</relationshipName>
    <type>Lookup</type>
</CustomField>