force-app/main/default/objects/os_Project__c/fields/os_Project_Admin__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectAdmin</relationshipName>
    <type>Lookup</type>
</CustomField>