force-app/main/default/objects/os_Project__c/fields/os_Project_Approver__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ProjectApprover</relationshipName>
    <type>Lookup</type>
</CustomField>