force-app/main/default/objects/os_Project__c/fields/os_Project_CIF_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>os_Project_CIF_Form_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://lightning.nativeforms.app/m0/sLoCsBt6m@ZZ?project=&quot;&amp;Id, &quot;https://lightning.nativeforms.app/m0/sLoCsBt6m@ZZ?project=&quot;&amp;Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project CIF Form Link</label>
    <type>Text</type>
</CustomField>