force-app/main/default/objects/os_Project__c/fields/os_Project_Link_Password__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Link_Password__c</fullName>
    <label>Project Link Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>