force-app/main/default/objects/os_Project__c/fields/os_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Name__c</fullName>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>