force-app/main/default/objects/os_Project__c/fields/os_Project_Rich_text_area__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Rich_text_area__c</fullName>
    <label>Project Rich text area</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>