force-app/main/default/objects/os_Project__c/fields/os_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>os_Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exclusive Resale</fullName>
            </value>
            <value>
                <fullName>Non-Exclusive</fullName>
            </value>
            <value>
                <fullName>Exclusive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>