force-app/main/default/objects/os_Project__c/fields/os_Property_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>os_Property_Propertyfinder__c</fullName>
    <label>Property - Propertyfinder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>