force-app/main/default/objects/os_Project__c/fields/os_PublicSiteURL__c.field-meta.xml
<CustomField>
    <fullName>os_PublicSiteURL__c</fullName>
    <formula>HYPERLINK(&quot;https://gulfsothebysinternational--project.sandbox.my.salesforce-sites.com/properties/projectIdFromURL?id=&quot;&amp; CASESAFEID(Id) , &quot;Related Units records&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PublicSiteURL</label>
    <type>Text</type>
</CustomField>