force-app/main/default/objects/os_Project__c/fields/os_Sub_Community__c.field-meta.xml
<CustomField>
    <fullName>os_Sub_Community__c</fullName>
    <label>Sub Community</label>
    <length>255</length>
    <type>Text</type>
</CustomField>