force-app/main/default/objects/os_Project__c/fields/os_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>os_Swift_Code__c</fullName>
    <label>Swift Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>