force-app/main/default/objects/os_Project__c/fields/os_Telephone__c.field-meta.xml
<CustomField>
    <fullName>os_Telephone__c</fullName>
    <label>Telephone</label>
    <type>Phone</type>
</CustomField>