force-app/main/default/objects/os_Project__c/fields/os_Total_Available_Units__c.field-meta.xml
<CustomField>
    <fullName>os_Total_Available_Units__c</fullName>
    <label>Total Available Units</label>
    <summaryForeignKey>OS_Property__c.os_Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>