force-app/main/default/objects/os_Project__c/fields/os_Total_Unit__c.field-meta.xml
<CustomField>
    <fullName>os_Total_Unit__c</fullName>
    <label>Total Unit</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>