force-app/main/default/objects/os_Project__c/fields/os_Total_UnSold__c.field-meta.xml
<CustomField>
    <fullName>os_Total_UnSold__c</fullName>
    <formula>os_Total_Available_Units__c -  os_Total_Sold_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total UnSold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>