force-app/main/default/objects/os_Project__c/fields/Payment_Option__c.field-meta.xml
<CustomField>
    <fullName>Payment_Option__c</fullName>
    <label>Payment Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Payment option 01</fullName>
            </value>
            <value>
                <fullName>Payment option 02</fullName>
            </value>
            <value>
                <fullName>Payment option 03</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>